test: DTOSS-10704 e2e test cases DTOSS-10939-10943 (#1657)
* test: added 4f playwright tests and runner - first draft

* fix: test harness for parquet, refinements for path definitions for 4f tests

* fix: specific fixes for 4f tests as they don't need normal db validations from the other epics

* fix: separate 4f current posting config from existing NEMS config

* fix: added nems subscription table to list of cleared between tests

* fix: added tolerance of non-json responses in playwright tests

* fix: attempt to fix url path construction in epic 4f playwright tests

* fix: added better regex for subscription ID matching when STUB is enabled on Caas subscription manager

* test: added unsubscribe-presubscribe-failed.txt to 10704 test suite spec - for testing unsub not supported

* fix: epic 4f - remove nhs number gen and hardcode to make sure checkdigit is satisfied

* fix: assert on unsubscribe response

* fix: tweak to DTOSS-10704-02 assertion - added check no mesh call when existing item requested.

* fix: added exception count expected for mesh failure test - added better waits around wiremock integration

* fix: add enable AND disable logic for 500 errors in wiremock

* fix: corrected wiremock cleanup

* fix: add more cleanup for nems subscription table

* fix: added debug outputs to 4f tests, reduced retries on sql checks using optional inputs

* test: generate unique nhs numbers per test

* fix: move assertion later on in api assertions for 4f

* fix: attempt to correct data shape to prevent 500 errors

* fix: clear out mesh outbox mappings in wiremock before starting tests

* fix: added log out of wiremock mappings after setting up failure condition - also check what the return status code is in this situation

* fix: use freshly generated nhs numbers for -04 failure case too

* fix: less strict on nhs number responses

* fix: remove old flag on DTOSS-10704-04 - should always run with wiremock

* fix: clearing exceptions at start of DTOSS-10704-04 test

* 

--- a/application/CohortManager/.env.example
+++ b/application/CohortManager/.env.example
@@ -13,6 +13,11 @@ MESHKEYPASSPHRASE="" #Passpharse for the private key for authenticating against 
 NEMS_CERT_PASSWORD="" # Password for the NEMS client certificate - change for production
 NEMS_MESH_MAILBOX_ID="" # MESH Mailbox ID for NEMS subscription delivery - will be provided by project for production
 
+# ManageCaasSubscription Mesh base URL
+# Unset to use the default local mesh in docker-compose (https://localhost:8700/messageexchange)
+# For WireMock runs, set to http://wiremock:8080/messageexchange
+MESH_API_BASE_URL=
+
 # Playwright Test Framework Additional Settings
 CAASFOLDER_STORAGE_CONNECTION_STRING="" # Enter the connection string for azurite in the quotes, the connection string can be found at https://github.com/Azure/Azurite?tab=readme-ov-file#connection-strings # For Windows use `127.0.0.1` and for Mac use `localhost`
 CONTAINER_NAME="" # Name of the container to be used in the test. Example: "inbound".
@@ -37,6 +42,10 @@ ENDPOINT_SERVICENOW_CASES_DATA_SERVICE="" # "http://localhost:9996/"
 SERVICENOW_CLIENT_ID=
 SERVICENOW_CLIENT_SECRET=
 SERVICENOW_REFRESH_TOKEN=
+# Base URL for Cohort Manager's ServiceNow receive endpoint (used by tests)
+ENDPOINT_SERVICE_NOW_MESSAGE_HANDLER=
+# Alternate invalid endpoint base to simulate inbound ServiceNow failures
+INVALID_ENDPOINT_SERVICE_NOW_MESSAGE_HANDLER=
 
 # CAAS Manage Subscription (local/dev overrides)
 # Optional overrides for CAAS mailbox IDs used by ManageCaasSubscription Subscribe stub
