fix: add retries to grype instalation to avoid errors when running in parallel
fix: new grype version with a different download command

--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -181,7 +181,21 @@ jobs:
           echo "VULNERABILITIES_REPOSITORY_REPORT=$VULNERABILITIES_REPOSITORY_REPORT" >> $GITHUB_ENV
           bash -x ${GITHUB_WORKSPACE}/templates/scripts/reports/scan-vulnerabilities.sh
 
-          curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sudo sh -s -- -b /usr/local/bin
+          run: |
+            retries=5
+            delay=10
+            count=0
+            until [ $count -ge $retries ]
+            do
+              curl -sSfL https://get.anchore.io/grype | sudo sh -s -- -b /usr/local/bin && break
+              count=$((count+1))
+              echo "Retry $count/$retries exited with failure, retrying in $delay seconds..."
+              sleep $delay
+            done
+            if [ $count -eq $retries ]; then
+              echo "Failed to install grype after $retries attempts."
+              exit 1
+            fi
 
           SCAN_RESULTS=$(grype "${PROJECT_NAME}-${function}:latest" --scope all-layers)
           # ANSI color codes
