feat: docker compose process for deps and apps

--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -370,7 +370,7 @@ jobs:
 
           # Run docker compose using BOTH the base file and the CI override file
           echo "Run docker compose deps and apps with the GHCR..."
-          docker compose -f compose.deps.yaml -f compose.ghcr.yaml up -d --no-build
+          docker compose -f compose.deps.yaml up -d --no-build
           sleep 20
 
           echo "--- DISK SPACE ---"
@@ -379,7 +379,7 @@ jobs:
           free -h
 
           echo "Run docker compose app with the GHCR..."
-          docker compose -f compose.yaml -f compose.ghcr.yaml up -d --no-build
+          docker compose -f compose.yaml up -d --no-build
           sleep 20
 
       - name: Run snapshot tests
