--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -368,7 +368,7 @@ jobs:
           echo "--- MEMORY ---"
           free -h
 
-          # Run docker compose using BOTH the base file and the CI override file
+          # Run docker compose using the base file
           echo "Run docker compose deps and apps with the GHCR..."
           docker compose -f compose.deps.yaml up -d --no-build
           sleep 20
@@ -379,7 +379,7 @@ jobs:
           free -h
 
           echo "Run docker compose app with the GHCR..."
-          docker compose -f compose.yaml up -d --no-build
+          docker compose -f compose.yaml -f compose.ghcr.yaml up -d --no-build
           sleep 20
 
       - name: Run snapshot tests
