fix: removing timeout logic on durable function and adding retry logic for failed batches in receive

--- a/application/CohortManager/src/Functions/CaasIntegration/RetrieveMeshFile/RetrieveMeshFile.csproj
+++ b/application/CohortManager/src/Functions/CaasIntegration/RetrieveMeshFile/RetrieveMeshFile.csproj
@@ -27,6 +27,9 @@
         <None Update="meshServerSideCerts.crt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+         <None Update="int.pem">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <None Update="local.settings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
             <CopyToPublishDirectory>Never</CopyToPublishDirectory>
