--- a/application/CohortManager/src/Functions/CaasIntegration/receiveCaasFile/receiveCaasFile.csproj
+++ b/application/CohortManager/src/Functions/CaasIntegration/receiveCaasFile/receiveCaasFile.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="2.0.4" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="9.0.2" />
+    <PackageReference Include="Parquet.Net" Version="5.2.0" />
     <PackageReference Include="Polly" Version="8.5.0" />
   </ItemGroup>
   <ItemGroup>
