--- a/application/CohortManager/src/Functions/Shared/Model/Model.csproj
+++ b/application/CohortManager/src/Functions/Shared/Model/Model.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Parquet.Net" Version="5.2.0" />
     <PackageReference Include="ParquetSharp" Version="17.0.0-beta1" />
     <PackageReference Include="RulesEngine" Version="5.0.3" />
   </ItemGroup>
