--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -360,9 +360,13 @@ jobs:
             export "$env_var_name=$image_id"
           done
 
+          echo "Creating .env file for Docker Compose..."
+          cat > .env <<EOL
           PASSWORD=$SNAPSHOT_PASSWORD
           AZURITE_CONNECTION_STRING=$SNAPSHOT_AZURITE_CONNECTION_STRING
           DB_NAME=$SNAPSHOT_DB_NAME
+          # ... and so on for all other variables your compose files need
+          EOL
 
           echo "Build the dependencies needed for local operation..."
           docker compose -f compose.deps.yaml -p ${PROJECT_NAME} --profile "*" build --no-cache
