--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -393,7 +393,7 @@ jobs:
           free -h
 
           echo "Run docker compose app with the GHCR..."
-          docker compose -f compose.yaml -f compose.ghcr.yaml up -d --no-build
+          docker compose -f compose.yaml up -d --no-build
           sleep 20
 
       - name: Run snapshot tests
