--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -317,7 +317,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       packages: read
-    needs: build-and-push
+    needs: build-and-push, get-functions
     env:
       SNAPSHOT_TEST_DIR: ${{ inputs.snapshot_test_dir }}
       APP_DIR: ${{ inputs.app_dir }}
@@ -349,7 +349,7 @@ jobs:
           SNAPSHOT_AZURITE_CONNECTION_STRING: ${{ secrets.SNAPSHOT_AZURITE_CONNECTION_STRING }}
           SNAPSHOT_DB_NAME: ${{ vars.SNAPSHOT_DB_NAME }}
         run: |
-          for function in $(echo '${{ needs.get-functions.outputs.FUNC_NAMES }}' | jq -r '.[]'); do
+          for function in ${{ fromJSON(needs.get-functions.outputs.FUNC_NAMES) }}; do
             raw_id="${{ inputs.gh_registry }}/${{ github.repository }}/${function}:${{ needs.build-and-push.outputs.short_commit_hash }}"
             image_id="${raw_id,,}"
 
