--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -196,7 +196,7 @@ jobs:
           fi
 
           echo Tagging the image for GitHub Registry...
-          GH_IMAGE=${{ inputs.gh_registry }}/${{ github.repository_owner }}/${{ inputs.project_name }}-${{ matrix.function }}:${{ env.COMMIT_HASH_TAG }}
+          GH_IMAGE="${{ inputs.gh_registry }}/${{ github.repository_owner }}/${{ inputs.project_name }}-${{ matrix.function }}:latest"
           # make it lowercase
           GH_IMAGE_ID="${GH_IMAGE,,}"
           docker tag ${PROJECT_NAME}-${function}:latest $GH_IMAGE_ID
@@ -393,7 +393,7 @@ jobs:
           free -h
 
           echo "Run docker compose app with the GHCR..."
-          docker compose -f compose.yaml -f compose.ghcr.yaml up -d --no-build
+          docker compose -f compose.yaml -f compose.ghcr.link.yaml up -d --no-build
           sleep 20
 
       - name: Run snapshot tests
